tests/errors/dotted.module.pxd
cdef inline int bar():
    return 5
